--- a/spira/package.yaml
+++ b/spira/package.yaml
@@ -1,6 +1,6 @@
-name:                spire
+name:                spira
 version:             0.1.0.0
-github:              "githubuser/spire"
+github:              "githubuser/spira"
 license:             BSD3
 author:              "Author name here"
 maintainer:          "example@example.com"
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/spire#readme>
+description:         Please see the README on GitHub at <https://github.com/githubuser/spira#readme>
 
 dependencies:
 - base >= 4.7 && < 5
@@ -39,7 +39,7 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - spire
+    - spira
 
   connect-four-exe:
     main:                ConnectFour.hs
@@ -50,7 +50,7 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - spire
+    - spira
 
   chess-exe:
     main:                 Chess.hs
@@ -61,7 +61,7 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - spire
+    - spira
 
   othello-exe:
     main:                 Othello.hs
@@ -72,4 +72,4 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - spire
+    - spira
