--- a/spira/spira.cabal
+++ b/spira/spira.cabal
@@ -4,13 +4,13 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: a67b1a5d63fee338fb66c1b634e038e57fa15f243966de464d61ef1b6b2f77f1
+-- hash: c2ca39c3c7a0dd139cf1a8396de7128addca543d39f5eed8185a94f48cc0d834
 
-name:           spire
+name:           spira
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/spire#readme>
-homepage:       https://github.com/githubuser/spire#readme
-bug-reports:    https://github.com/githubuser/spire/issues
+description:    Please see the README on GitHub at <https://github.com/githubuser/spira#readme>
+homepage:       https://github.com/githubuser/spira#readme
+bug-reports:    https://github.com/githubuser/spira/issues
 author:         Author name here
 maintainer:     example@example.com
 copyright:      2020 Author name here
@@ -23,7 +23,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/spire
+  location: https://github.com/githubuser/spira
 
 library
   exposed-modules:
@@ -31,7 +31,7 @@ library
       Data
       Game
   other-modules:
-      Paths_spire
+      Paths_spira
   hs-source-dirs:
       src
   build-depends:
@@ -47,7 +47,7 @@ executable chess-exe
       ConnectFour
       Othello
       TicTacToe
-      Paths_spire
+      Paths_spira
   hs-source-dirs:
       app
   ghc-options: -main-is            Chess -threaded -rtsopts -with-rtsopts=-N
@@ -55,7 +55,7 @@ executable chess-exe
       base >=4.7 && <5
     , containers >=0.6.2.1
     , mtl >=2.2.2
-    , spire
+    , spira
     , split
   default-language: Haskell2010
 
@@ -65,7 +65,7 @@ executable connect-four-exe
       Chess
       Othello
       TicTacToe
-      Paths_spire
+      Paths_spira
   hs-source-dirs:
       app
   ghc-options: -main-is           ConnectFour -threaded -rtsopts -with-rtsopts=-N
@@ -73,7 +73,7 @@ executable connect-four-exe
       base >=4.7 && <5
     , containers >=0.6.2.1
     , mtl >=2.2.2
-    , spire
+    , spira
     , split
   default-language: Haskell2010
 
@@ -83,7 +83,7 @@ executable othello-exe
       Chess
       ConnectFour
       TicTacToe
-      Paths_spire
+      Paths_spira
   hs-source-dirs:
       app
   ghc-options: -main-is            Othello -threaded -rtsopts -with-rtsopts=-N
@@ -91,7 +91,7 @@ executable othello-exe
       base >=4.7 && <5
     , containers >=0.6.2.1
     , mtl >=2.2.2
-    , spire
+    , spira
     , split
   default-language: Haskell2010
 
@@ -101,7 +101,7 @@ executable tic-tac-toe-exe
       Chess
       ConnectFour
       Othello
-      Paths_spire
+      Paths_spira
   hs-source-dirs:
       app
   ghc-options: -main-is            TicTacToe -threaded -rtsopts -with-rtsopts=-N
@@ -109,6 +109,6 @@ executable tic-tac-toe-exe
       base >=4.7 && <5
     , containers >=0.6.2.1
     , mtl >=2.2.2
-    , spire
+    , spira
     , split
   default-language: Haskell2010
