Moved stack project to top level

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,34 @@
-.DS_Store
-
-
-# Ceptre junk files
+# Generated ceptre files
+/*.cep
 trace.dot
 log.txt
+
+
+# Haskell
+*~
+dist
+dist-*
+cabal-dev
+*.o
+*.hi
+*.hie
+*.chi
+*.chs.h
+*.dyn_o
+*.dyn_hi
+.hpc
+.hsenv
+.cabal-sandbox/
+cabal.sandbox.config
+*.prof
+*.aux
+*.hp
+*.eventlog
+.stack-work/
+cabal.project.local
+cabal.project.local~
+.HTF/
+.ghc.environment.*
+
+# MacOS...
+.DS_Store
